# LoopFeature-engine

./: .gitignore  README.md  dijkstra.txt  generate_GPX.py  graphe.txt  graphe_manage.py  main.py  overpass.py  path.txt  pyproject.toml  requirements.txt  testgpx.gpx  trace.gpx
loopfeature/: Graph.py  LICENCE  __init__.py  loop.py  main.py  overpass.py  point.py  segment.py  srtm.py
src/loopfeature/: __init__.py  gpx.py  graph.py  loop.py  main.py  point.py  segment.py  srtm.py
tests/: test_Point.py  test_graphe.py  test_segment.py
