[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "loopfeature"
version = "0.1.0"
description = "Python library for generating circular running routes from OpenStreetMap data."
readme = "README.md"
requires-python = ">=3.13"

authors = [
    { name = "Ton Nom", email = "ton.email@example.com" }
]

license = { file = "LICENSE" }

keywords = [
    "running",
    "route",
    "gpx",
    "osm",
    "openstreetmap",
    "navigation",
    "trail"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS"
]

dependencies = [
    "networkx",
    "gpxpy",
    "requests"
]

[project.urls]
Homepage = "https://github.com/ton-pseudo/runningroute-engine"
Repository = "https://github.com/ton-pseudo/runningroute-engine"
Issues = "https://github.com/ton-pseudo/runningroute-engine/issues"

[tool.setuptools.packages.find]
where = ["src"]