[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "loopfeature"
version = "0.1.0"
description = "Python library for generating circular running routes from OpenStreetMap data."
readme = "README.md"
requires-python = ">=3.13"

authors = [
    { name = "FleterEwenn", email = "fleter.ewenn@gmail.com" }
]

license = { file = "LICENSE" }

keywords = [
    "running",
    "gpx",
    "osm",
    "openstreetmap",
    "trail"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS"
]

dependencies = [
    "requests>=2.34",
    "rasterio>=1.5"
]

[project.urls]
Homepage = "https://github.com/FleterEwenn/LoopFeature"
Repository = "https://github.com/FleterEwenn/LoopFeature"
Issues = "https://github.com/FleterEwenn/LoopFeature/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}